# openapi_gen

./: Cargo.toml  README.md
examples/: basic.rs  wallet.json
src/: error_process.rs  lib.rs  main.rs  open_api_spec.rs  open_api_type.rs  parse_spec.rs  parse_type.rs  read_wanted_spec.rs  run_gen.rs  utils.rs
src/generate_js/: fix_to_camel_case.rs  generate_ident.rs  generate_params_type.rs  generate_response_io.rs  mod.rs
src/parse_spec/: fix_url_param.rs  mod.rs  parse_spec.rs  parse_type.rs
src/parse_spec/filters/: filter_deref.rs  filter_null.rs  get_sorted_map.rs  mod.rs
