[package]
name = "openapi_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.72"

log = "0.4.14"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.6"
env_logger = "0.9.0"
