[package]
name = "openapi_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"

log = { version = "0.4.17" }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.6"
env_logger = "0.9.0"
serde_yaml = "0.8.24"
